--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "gitignore": "^0.7.0",
+    "joi": "^17.13.3",
     "pg": "^8.12.0"
   },
   "devDependencies": {
