--- a/sqitch.conf.example
+++ b/sqitch.conf.example
@@ -2,7 +2,7 @@
 	engine = pg
 	plan_file = sqitch.plan
 	top_dir = migrations
-# [engine "pg"]
-	# target = db:pg:
+[engine "pg"]
+	target = db:pg:ocalm
 	# registry = sqitch
 	# client = psql.exe
