--- a/sqitch.conf.example
+++ b/sqitch.conf.example
@@ -1,8 +1,8 @@
 [core]
 	engine = pg
-	plan_file = sqitch.plan
 	top_dir = migrations
-# [engine "pg"]
-	# target = db:pg:
+	# plan_file = migrations/sqitch.plan
+[engine "pg"]
+	target = db:pg:ocalm
 	# registry = sqitch
-	# client = psql.exe
+	# client = psql
