--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@faker-js/faker": "^8.4.1",
     "eslint": "^9.5.0",
     "globals": "^15.6.0"
   }
