--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "faker": "^5.5.3",
     "gitignore": "^0.7.0",
     "joi": "^17.13.3",
     "pg": "^8.12.0"
