--- a/compose.yaml
+++ b/compose.yaml
@@ -1,51 +1,32 @@
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Docker Compose reference guide at
-# https://docs.docker.com/go/compose-spec-reference/
-
-# Here the instructions define your application as a service called "server".
-# This service is built from the Dockerfile in the current directory.
-# You can add other services your application may depend on here, such as a
-# database or a cache. For examples, see the Awesome Compose repository:
-# https://github.com/docker/awesome-compose
 services:
-  server:
-    build:
-      context: .
+  ocalm_backend:
     environment:
-      NODE_ENV: production
+      - PGUSER=postgres
+      - PGPASSWORD=postgres
+      - PGHOST=ocalm_postgres_database
+      - PGPORT=5432
+      - PGDATABASE=ocalm
+      - PGURI=postgres://postgres:postgres@ocalm_postgres_database:5432/ocalm
+      - PGSERVERPROXYURI=http://localhost:4000
+    build: .
     ports:
-      - 5432:5432
+      - "4000:4000"
+    depends_on:
+      - ocalm_postgres_database
+    volumes:
+      - .:/usr/src/app
 
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker-compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
+  ocalm_postgres_database:
+    image: postgres
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=ocalm
+      - PGDATA=/data/pg
+    volumes:
+      - $HOME/pg,/data/pg
+    ports:
+      - "5432:5432"
 
+volumes:
+  pgdata:
