--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@eslint/js": "^9.6.0",
     "@faker-js/faker": "^8.4.1",
     "eslint": "^9.6.0",
-    "globals": "^15.8.0"
+    "globals": "^15.8.0",
+    "jest": "^29.7.0"
   }
 }
