--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "db:create": "sqitch deploy --verify",
+    "db:create": "sqitch deploy --verify && npm run db:import",
     "db:import": "node data/faker.js",
     "db:reset": "sqitch revert -y && npm run db:create && npm run db:import",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node --watch server.js",
+    "test": "NODE_ENV=test NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest"
   },
   "keywords": [],
   "author": "Team O'Calm",
