--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "faker": "^5.5.3",
     "gitignore": "^0.7.0",
     "joi": "^17.13.3",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "scrypt-js": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
