--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "db:reset": "sqitch revert -y && npm run db:create && npm run db:import",
     "start": "node index.js",
     "dev": "node --watch server.js",
-    "test": "NODE_ENV=test NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest"
+     "test": "cross-env NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' jest"
   },
   "keywords": [],
   "author": "Team O'Calm",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "faker": "^5.5.3",
