--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
     "db:create": "sqitch deploy --verify && npm run db:import",
     "db:import": "node data/faker.js",
     "db:reset": "sqitch revert -y && npm run db:create && npm run db:import",
+    "db:data": "node data/faker.js",
     "start": "node index.js",
     "dev": "node --watch server.js",
-    "test": "NODE_ENV=test NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest"
   },
   "keywords": [],
   "author": "Team O'Calm",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "faker": "^5.5.3",
     "gitignore": "^0.7.0",
     "joi": "^17.13.3",
     "pg": "^8.12.0",
-    "scrypt-js": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
