--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:data": "node data/faker.js",
     "start": "node index.js",
     "dev": "node --watch server.js",
-     "test": "cross-env NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' jest"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' jest"
   },
   "keywords": [],
   "author": "Team O'Calm",
@@ -25,6 +25,7 @@
     "faker": "^5.5.3",
     "gitignore": "^0.7.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0"
   },
   "devDependencies": {
