--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jsdoc-swagger": "^1.8.0",
     "faker": "^5.5.3",
     "gitignore": "^0.7.0",
     "joi": "^17.13.3",
