--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "db:create": "sqitch deploy --verify && npm run db:import",
-    "db:import": "node data/faker.js",
-    "db:reset": "sqitch revert -y && npm run db:create && npm run db:import",
-    "db:data": "node data/faker.js",
+    "db:create": "sqitch deploy --verify",
+    "db:reset": "sqitch revert -y && npm run db:create",
     "db:save": "node backup.js",
-    "db:restore": "pg_restore -h process.env.DB_HOST -p process.env.DB_PORT -U process.env.DB_USER -d process.env.DB_NAME -v backupfile.dump ",
+    "db:restore": "node restoreBackup.js ",
     "dev": "node --watch server.js",
     "test": "cross-env NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' jest"
   },
@@ -40,3 +38,4 @@
     "jest": "^29.7.0"
   }
 }
+
