--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "@faker-js/faker": "^8.4.1",
-    "eslint": "^9.6.0",
+    "eslint": "^9.7.0",
+    "eslint-plugin-jest": "^28.6.0",
     "globals": "^15.8.0",
     "jest": "^29.7.0"
   }
 }
-
