--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DB_NAME=yourdatabase
 DB_PASSWORD=yourpassword
 DB_PORT=5432
 DB_URL=postgres://localhost/yourdatabase
+JWT_SECRET=youramazingtoken
+API_DOCUMENTATION_ROUTE=/documentation
