--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "db:reset": "sqitch revert -y && npm run db:create",
     "db:save": "node backup.js",
     "db:restore": "node restoreBackup.js ",
-    "dev": "node --watch server.js",
+    "db:import": "node faker.js",
+    "start": "node index.js",
+    "dev": "node --watch index.js",
     "test": "cross-env NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' jest"
   },
   "keywords": [],
